# predprof-case-2

./: .dockerignore  .env.example  .gitignore  AGENT_README.md  README.md  docker-compose.yml  командный кейс.txt
backend/: Dockerfile  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_items.py  40132aad1e8a_add_enums.py  7c1b4c8a9f2e_add_served_status_to_meal_issue.py  bcfbbaa6b8bd_add_core_models.py  e025509e2ca1_add_meal_type_enum.py  fa8d232d0568_init_schema.py
backend/app/: config.py  db.py  docs.py  main.py  models.py
backend/app/db/: __init__.py  deps.py  session.py
backend/app/models/: __init__.py  allergy.py  associations.py  dish.py  inventory_transaction.py  item.py  meal_issue.py  menu.py  menu_item.py  notification.py  payment.py  product.py  purchase_request.py  purchase_request_item.py  review.py  role.py  user.py  user_notification.py
backend/app/routers/: __init__.py  admin_reports.py  admin_stats.py  allergies.py  auth.py  dishes.py  inventory_transactions.py  meal_issues.py  menus.py  notifications.py  payments.py  preferences.py  products.py  purchase_requests.py  reviews.py  users.py
backend/app/schemas/: __init__.py  admin_reports.py  admin_stats.py  allergy.py  auth.py  dish.py  inventory_transaction.py  meal_issue.py  menu.py  (+6 more)
backend/scripts/: seed.py
backend/tests/: conftest.py  test_admin_reports.py  test_admin_stats.py  test_allergies_preferences.py  test_app.py  test_auth.py  test_dishes_menus.py  test_inventory.py  test_meal_issues.py  test_payments.py  test_purchase_requests.py  test_reviews.py
(+55 files in other folders)
