[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "alembic>=1.13.2",
    "asyncpg>=0.30.0",
    "bcrypt<4.0",
    "email-validator>=2.2.0",
    "fastapi>=0.128.0",
    "passlib[bcrypt]>=1.7.4",
    "pydantic-settings>=2.5.2",
    "python-multipart>=0.0.9",
    "python-jose[cryptography]>=3.3.0",
    "python-dotenv>=1.0.1",
    "psycopg[binary]>=3.3.2",
    "sqlalchemy>=2.0.46",
    "uvicorn[standard]>=0.40.0",
]

[dependency-groups]
dev = [
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.2",
    "ruff>=0.6",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
